FIX: contento of hero divider not responsive

--- a/components/BurgerMenu/BurgerMenu.module.scss
+++ b/components/BurgerMenu/BurgerMenu.module.scss
@@ -10,8 +10,8 @@
   cursor: pointer;
   padding: 0;
   // z-index: 20;
-  top: 10px;
-  right: 10px;
+  top: 20px;
+  right: 20px;
 }
 
 .burger:focus { 
